docs: configure light/dark mode

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,18 @@ edit_uri: edit/main/docs/
 theme: 
   name: material
   palette:
-    primary: brown
+
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
   
   features:
     # links on pages to view/edit md source on github
